   Context menu function SaveLabelStyle() will set current format as default for all markers/conditions.
   MainWindow menu "Settings/Panel Defaults/MarkerLabels..." also has new field to set this format string.
   These defaults can be saved to go4 settings.      
8. Add full-screen mode for main window (F11). Both for qt3 and qt4   

Changes in Go4 v4.5.2 (April 2012)
1. Bugfix in gui shutdown: circular deletion of mainwindow and timer could 
   lead to crash on suse 12.1. Also changed details of shutdown mechanism, 
   hope to fix the "hanging analysis with 99% cpu" problems (this may happen 
   when gui terminates before analysis was properly disconnected).
2. Adjusted Makefile.config for suse 12.1
3. Add in MakeParameter method possibility to execute setup macro
4. In GetParameter method one could optionally specify class name, 
   which will be verified
5. Adjust savecond.C and saveparam.C macros
6. Add possibility to change default position of stat box (only for qt4 gui)
7. Add support of composite events in dynamic list editor (qt3/qt4)
8. Add retry counter for some MBS sources - let reconnect server if
   it was down for some time. Useful for online analysis when server can
   be switched off/on very often for short time. Implemented in MBS source class,
   can be configured in go4analysis, qt3/at4 gui, hotstart.
9. Fix error in event selection of MBS sources like stream server, 
   make more compact event source selection in the gui (qt4 only)
10.Fix error in fitgui - in wizard mode model assignment to the 
   data component was not working (problem only in qt4 version)
11.Allow to use TArrayI and TArrayD in the TGo4Parameter and parameter editor.
   Now parameter elements of such classes can be edited and store in script
12.Allow to specify several files in row as argument of command "go4analysis -file ..."
   It is very useful in the case when wildcard characters are used. Shell 